configuração do projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=estudo
+spring.application.name=estudo,
+spring.output.ansi.enabled = ALWAYS
+
+#configuração do banco de dados
+server.port=8081
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/todosimple?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=V12909189e?
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql=true
